2012-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/Rules-piglatin: Change suffix from .po-update-en to
	.po-update-en-piglatin.

2012-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Add a pig farm.

	* po/piglatin.sed: New file.
	* po/en@piglatin.header: Likewise.
	* po/Rules-piglatin: Likewise.
	* po/README: Add en@piglatin to autogenerated languages.

2012-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/date.c (GRUB_MOD_INIT): Remove non-uniform
	"Command for ...".
	* grub-core/commands/hdparm.c (options): Use "Display" rather than
	"Check" since we don't check anything.
	* grub-core/commands/i386/cpuid.c (options): Clarify that long mode
	is 64-bit one.
	* grub-core/commands/search_wrap.c (options): Clarify the conditions.
	* grub-core/disk/geli.c (grub_md_sha256_real): Fix typo.
	(grub_md_sha512_real): Likewise.

2012-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/gptsync.c: Fix typographic quoting.
	* grub-core/commands/ieee1275/suspend.c: Likewise.
	* grub-core/commands/parttool.c: Likewise.
	* grub-core/commands/search_wrap.c: Likewise.
	* grub-core/commands/videoinfo.c: Likewise.
	* grub-core/gfxmenu/gui_label.c: Likewise.
	* grub-core/hello/hello.c: Likewise.
	* grub-core/kern/emu/main.c: Likewise.
	* grub-core/net/net.c: Likewise.
	* grub-core/normal/menu.c: Likewise.
	* grub-core/normal/menu_text.c: Likewise.
	* grub-core/normal/misc.c: Likewise.
	* util/grub-editenv.c: Likewise.
	* util/grub-install.in: Likewise.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/grub-setup.c: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.

2012-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpihalt.c: Add TRANSLATORS comments.